--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "beautify-scrollbar": "^1.0.8",
     "v2-table": "^3.0.3",
     "vue": "^2.5.17",
